--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "browserify": "*"
   },
   "devDependencies": {
+      "path": "0.4.x",
+      "chai": "1.8.x",
+      "mocha": "1.17.x"
   },
   "engine": "node >= 0.6.0",
   "private": true
